src/kubernetes/abacus/abacus-tools.yaml
apiVersion: v1
kind: Service
metadata:
  name: abacus-tools-service
spec:
  type: ClusterIP
  selector:
    app: abacus-tools
  ports:
    # TODO: https (443)
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abacus-tools-deployment
  labels:
    app: abacus-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abacus-tools
  template:
    metadata:
      labels:
        app: abacus-tools
    spec:
      containers:
        # TODO: resources.requests, resources.limits
        - name: abacus-tools
          image: adeira/abacus-tools
          ports:
            - containerPort: 3000
