src/kubernetes/abacus/abacus.yaml
apiVersion: v1
kind: Service
metadata:
  name: abacus-service
spec:
  type: ClusterIP
  selector:
    app: abacus
  ports:
    # TODO: https (443)
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abacus-deployment
  labels:
    app: abacus
spec:
  replicas: 2
  revisionHistoryLimit: 20
  selector:
    matchLabels:
      app: abacus
  template:
    metadata:
      labels:
        app: abacus
    spec:
      containers:
        # TODO: resources.requests, resources.limits
        - name: abacus
          image: adeira/abacus
          livenessProbe:
            httpGet:
              path: /status/ping
              port: 5000
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 5000
          args:
            - '--no-migrations'
            - '--arangodb-database=$(ARANGODB_DATABASE)'
            - '--arangodb-username=$(ARANGODB_USERNAME)'
            - '--arangodb-password=$(ARANGODB_PASSWORD)'
            - '--arangodb-url=http://arangodb-single-server.default.svc.cluster.local:8529' # TODO: https://…
