src/kubernetes/abacus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abacus-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx' # use the shared ingress-nginx
    cert-manager.io/cluster-issuer: 'letsencrypt-production'
    nginx.ingress.kubernetes.io/proxy-body-size: '16m'
    nginx.ingress.kubernetes.io/backend-protocol: 'http'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - abacus.adeira.io
        - adeira.io
        - kochka.com.mx
        - mrtnzlml.com
        - tools.adeira.io
      secretName: abacus-tls
  rules:
    - host: adeira.io
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: abacus-backoffice-service
                port:
                  number: 80
    - host: abacus.adeira.io
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: abacus-service
                port:
                  number: 80
    - host: kochka.com.mx
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: abacus-kochka-service
                port:
                  number: 80
    - host: mrtnzlml.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: mrtnzlml-meta-service
                port:
                  number: 80
    - host: tools.adeira.io
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: abacus-tools-service
                port:
                  number: 80
